--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     left: 0;
     width: 100%;
     padding: 2rem 7%;
-    background: yellowgreen;
+    background: transparent;
     display:flex;
     align-items: center;
     z-index: 100;
@@ -85,6 +85,7 @@ section{
 .home-content h1{
     font-size: 5.6rem;
     font-weight: 700;
+    margin-bottom: .3rem;
 }
 
 .home-content p{
@@ -121,10 +122,66 @@ section{
     color: var(--white-color);
     letter-spacing: .1rem;
     font-weight: 600;
+    border: .2rem solid transparent;
     transition: .5s ease;
 
 }
 .btn:hover{
     background: transparent;
     color: var(--main-color);
+    border-color: var(--main-color);
+}
+
+.home .profession-container{
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    width: 768px;
+    height: 768px;
+    
+    overflow:hidden ;
+    pointer-events: none;
+}
+.home .profession-container .profession-box{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 768px;
+    height: 768px;
+    border-radius:50% ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home .profession-box .profession{
+position: absolute;
+left: 0;
+display: flex;
+align-items: center;
+flex-direction: column;
+color: var(--main-color);
+transform: rotate(calc(360deg / 4 * var(--i)));
+transform-origin: 384px;
+background: var(--bg-color);
+padding: 13px 0;
+}
+
+.home .profession i{
+    font-size: 3.8rem;
+
+}
+
+.home .profession h3{
+    font-size: 3.2rem;
+    line-height: 1;
+    font-weight: 600;
+
+}
+.home .profession-box .circle{
+    width: 560px;
+    height: 560px;
+    border: 3px solid var(--main-color);
+    border-radius: 50%;
 }
