--- a/style.css
+++ b/style.css
@@ -37,8 +37,9 @@ body{
     transition: .5s;
 
 }
-.header .sticky{
-background: var(--bg-color);
+
+.header.sticky{
+background: white;
 box-shadow: 0 .1rem 1rem var(--shadow-color);
 }
 
@@ -59,6 +60,9 @@ box-shadow: 0 .1rem 1rem var(--shadow-color);
 .header.sticky .navbar a{
     color: var(--text-color);
 }
+.header.sticky .navbar a.active{
+    color: var(--main-color);
+}
 
 .navbar a.active::before{
     content: '';
@@ -69,6 +73,11 @@ box-shadow: 0 .1rem 1rem var(--shadow-color);
     height: .2rem;
     background: var(--white-color);
 }
+.header.sticky .navbar a::before{
+    background: var(--main-color);
+    opacity: .7;
+}
+
 #darkMode-icon{
     font-size:2.4rem;
     color: var(--white-color);
