--- a/style.css
+++ b/style.css
@@ -295,5 +295,12 @@ gap: 2rem;
     padding: 3rem 2rem 4rem;
     border-radius: 2rem;
     box-shadow: 0 .1rem .5rem var(--shadow-color);
+    text-align: center;
+    border-top: .6rem solid var(--main-color);
+    border-bottom: .6rem solid var(--main-color);
 
+}
+.services-box i{
+    font-size: 7rem;
+    color: var(--main-color);
 }
