--- a/style.css
+++ b/style.css
@@ -428,6 +428,13 @@ span{
     width: 100%;
     padding: 5rem;
 }
+.testimonial-wrapper .testimonial-box{
+    
+    padding: 1rem;
+    border-radius: 2rem;
+    overflow: hidden;
+}
+
 .testimonial-content .testimonial-slide{
     display: flex;
     align-items: center;
@@ -454,4 +461,20 @@ span{
 .testimonial-slide p{
     font-size: 1.4rem;
     text-align: center;
+}
+.testimonial-box .swiper-button-next,
+.testimonial-box .swiper-button-prev{
+   color: var(--main-color);
+}
+.testimonial-box .swiper-button-next{
+    right: 0;
+}
+.testimonial-box .swiper-button-prev{
+    left: 0;
+}
+.testimonial-box .swiper-pagination-bullet {
+    background: rgba(0, 0, 0, .8);
+}
+.testimonial-box .swiper-pagination-bullet-active{
+    background: var(--main-color);
 }
