--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
     --shadow-color:rgba(0, 0, 0, .2);
 
 }
+.dark-mode{
+    --bg-color:#0b061f;
+    --text-color:#fdfdfd;
+    --shadow-color:rgba(0, 0, 0, .7); 
+}
 html{
     font-size: 62.5%;
     overflow: scroll;
